--- a/gb/11/11/19/n3435221.md
+++ b/gb/11/11/19/n3435221.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/erg2932/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/erg2932/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/erg2932/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/erg2932/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/erg2932/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/erg2932/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/erg2932/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/erg2932/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/erg2932/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/erg2932/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/erg2932/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/erg2932/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/erg2932/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/erg2932/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/erg2932/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>探索未来科学与文化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2011/11/111106133829100445-600x400.jpg" />
 <h6>只要按照正统文化去学习，就能够融入古人“天人合一”的境界，环境与你，自然就不相制约了。（摄影：Fotolia）
@@ -9,14 +9,14 @@
 <p><font color=#8B7355 size=3>11月12日在台大校园进行了一场“未来科学与文化讲座”，讲座中讨论了许多引人入胜的话题，打开了人们对于宇宙观及修炼界的新视野。</font></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334212168-450x341.jpg" alt="" title="" width="450" b="341"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111190334212168-450x341.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334212168-450x341.jpg" alt="" title="" width="450" b="341"
 	class="size-medium wp-image-7768551" /></a><br /><span class="bn12">未来科学与文化讲座讲者合影，由左至由为中央气象局技士邓博元、上海同德堂国药号胡乃文医师、宜兰大学生物机电系助理教授许凯雄、中华顾问工程司桥梁技术中心主任王仲宇教授、香港西贡刘超祺博士、主持人。（摄影: 新纪元）</span></div>
 <p><!-- --></p>
 <p>迈入第八年的“未来科学与文化讲座”，几年来在台湾累积了稳定的观众群，每年的这场研讨会中，人们以不同于现代科学的观点，从修炼界独特的宇宙观和前瞻性认识中，获得理性的启迪。今年的主题包括植物的超感功能研究、三千年一现的优昙婆罗花的故事和研究、古代智慧面对环境的新挑战、返本归真让人体固有功能再现、人体可以起空等引人入胜的话题。</p>
 <p>11月初的周末，台北天气阴雨微冷，台大凝态物理馆国际会议厅显得非常热络，宜兰大学生物机电系助理教授许凯雄率领研究团队，利用“未来科学与文化讲座”前瞻性论坛的机会，发表植物超感功能研究。</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334242168.jpg" alt="" title="" width="289" b="418"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111190334242168.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334242168.jpg" alt="" title="" width="289" b="418"
 	class="size-medium wp-image-7768552" /></a><br /><span class="bn12">宜兰大学生物机电系助理教授许凯雄利用实验证明植物是有感的。（摄影: 新纪元）</span></div>
 <p><!-- --></p>
 <p>许凯雄首先谈到，在人们观念中认为不动、无感的植物，在1966年，由美国测谎专家巴克斯特（Cleve Backster）首先将测谎仪接在植物上，发现植物对外来威胁快速反应，甚至还具有“读心术”的特异功能，但这项研究，至今还不被主流科学界所接纳。</p>
@@ -26,7 +26,7 @@
 <p><b>以传统文化智慧 面对环境的挑战</b></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751322165.jpg" alt="" title="" width="392" b="600"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111220751322165.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751322165.jpg" alt="" title="" width="392" b="600"
 	class="size-medium wp-image-7768553" /></a><br /><span class="bn12">中央气象局技士邓博元（摄影: 新纪元）</span></div>
 <p><!-- --><br />中央气象局技士邓博元，本身对于中国传统文化颇有兴趣并有深入的了解，他认为中国传统文化是讲求“天人合一”的中心思想，并集“儒、释、道”三家文化的思想精华。面对目前生存环境不断恶化的种种威胁和考验，邓博元认为：“只要去看、去接受中国的正统文化，至少可以做到自保。”</p>
 <p>邓博元表示，正统文化它就是一个场，里面都是做人的道理，想法不一样，行为就会跟着改变，只要去接触、甚至参观，它里面正的因素（讯息）就会源源不绝的传送过来。他拿“印度铁柱”做比喻，曾经有位叫哈德费尔德的人做过实验，将铁柱上的一小片取下后淋上水，结果在一夜间铁片就生銹了，但是铁柱的断端在同样的实验室条件下四天都不腐蚀，邓博元表示：“按里讲，条件相同应该是对应的，如果很纯，那片也不会生锈才对；我认为，铁柱它有一个场，真正起作用的是它背后的那个场，就像正统文化的场所起到的正面作用一样。”</p>
@@ -39,20 +39,20 @@
 <p><B>人间奇花 优昙婆罗花 </B></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220752152165.jpg" alt="" title="" width="400" b="600"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111220752152165.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220752152165.jpg" alt="" title="" width="400" b="600"
 	class="size-medium wp-image-7768554" /></a><br /><span class="bn12">香港西贡刘超祺博士（摄影: 新纪元） </span></div>
 <p><!-- --></p>
 <p>三千年一现的优昙婆罗花，在香港西贡刘超祺博士的“主来小园”家里，从2008年8月23日他太太林佩芬生日那天，发现了42朵长在停车场花园的钢闸上开始，至今已满园盛开了1,267朵。是怎样的福份，这三千年一遇的千朵优昙婆罗花开在刘超祺的花园里？当今世上又有谁能曾经看过？又如何来证明这超越世间常理的小花就是优昙婆罗花呢！</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751542165-450x302.jpg" alt="" title="" width="450" b="302"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111220751542165-450x302.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751542165-450x302.jpg" alt="" title="" width="450" b="302"
 	class="size-medium wp-image-7768555" /></a><br /><span class="bn12">优昙婆罗花( 翻拍自植物也有情绪)（摄影: 新纪元）</span></div>
 <p><!-- --></p>
 <p>何以说此小花超乎世间常理？看过此花的人都知道，她不仅可以在树叶、枝干上盛开，也可以在金属框架、铅铝、玻璃、鐡丝、钢丝、纱门、伞骨架等缺乏水分和养料的东西上盛开。刘超祺表示 ，优昙婆罗花整株植物色如玉，白如雪，给人一种轻盈、纯洁、飘逸、清新脱俗和神圣的感觉。整株花可以保持长达一、两年而不衰；她超乎地球上任何植物的生长规律，不需土壤、水源或营养。他们夫妻俩仔曾细观察优昙婆罗花的生长过程，但看不到她从何而来，如何而去，看不到她的生长过程，只观察到她从花苞微开至全开，后直保持至消失为止，但看不到是她如何消失的。</p>
 <p>曾有人质疑此花为草蛉虫卵，刘超祺以其亲身所见打破谣传，2009年6月8日，他观察到，有3只草蛉虫卵（分别呈黄色、咖啡色和黑色）夹杂1朵优昙婆罗花在桔树的叶子上长出来，这阶段的草蛉虫卵与优昙婆罗花在色泽上截然不同，并且草蛉虫的生命周期很短，3~15天后会孵化，顶端破口，虫子离开虫卵然后枯萎。</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751432165_1.jpg" alt="" title="" width="412" b="599"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111220751432165_1.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111220751432165_1.jpg" alt="" title="" width="412" b="599"
 	class="size-medium wp-image-7768556" /></a><br /><span class="bn12">优昙婆罗花( 翻拍自植物也有情绪)（摄影: 新纪元） </span></div>
 <p><!-- --><br />何以草蛉虫卵外貌近似于优昙婆罗花呢？这里引用佛教经典大乘同性经卷下、大乘法苑义林章卷六本等记载：某时释迦牟尼在天宫说法，当时有大魔王名“潶泷”又叫“波旬”在席间对释迦说：“我要坏你佛法。等到末法时期，你法运衰时，我让我的魔子魔孙统统穿上袈纱，走进寺庙，坏你佛法”。本师泪下&#8230;&#8230;良久后，释迦坚定地说：“那时我将率领我的弟子，脱掉袈纱走出寺庙，而且一世修成！”</p>
 <p>而法轮功创始人李洪志先生所着《转法轮（卷二）》〈悟〉上所载：“人世浑浑，珠目相混。如来下世必悄悄然。传法时，必有邪门干扰。道魔同传，同在一世，真真假假重在悟。何以分辨，必有上士。”当今草蛉虫卵的出现，不就像是惑乱正法的邪魔一般，但只要静心体察，必可观其真伪。</p>
@@ -60,7 +60,7 @@
 <p><b>返本归真——人体固有功能再现</b></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	<img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334262168-450x300.jpg" alt="" title="" width="450" b="300"
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/11/1111190334262168-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2011/11/1111190334262168-450x300.jpg" alt="" title="" width="450" b="300"
 	class="size-medium wp-image-7768557" /></a><br /><span class="bn12">上海同德堂国药号胡乃文医师。（摄影: 新纪元）</span></div>
 <p><!-- --></p>
 <p>上海同德堂国药号胡乃文医师的演讲，“返本归真——人体固有功能再现”，古今例子生动精彩的穿插，让现场观众对人体功能和心性的返本归真有了新的认识。</p>
@@ -75,48 +75,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/9/3/18/n2467313.md#1">气功与特异功能(上)</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/9/3/18/n2467325.md#1">气功与特异功能(下)</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/9/4/28/n2509655.md#1">《马可?波罗游记》中关于特异功能的记载</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/10/10/26/n3065148.md#1">特异功能 你信不信</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/5/n3335223.md#1">优昙婆罗花再现 神迹示人退出邪共</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/11/n3340924.md#1">优昙婆罗花绽放北卡</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/11/n3340941.md#1">投稿：优昙婆罗花盛开在长春</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/11/n3341227.md#1">2011年7月在吉林大学盛开的优昙婆罗花</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/14/n3343901.md#1">台湾宜兰三现优昙婆罗花</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/11/8/20/n3349569.md#1">吉林市民喜见优昙婆罗花</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/3/18/n2467313.md#1">气功与特异功能(上)</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/3/18/n2467325.md#1">气功与特异功能(下)</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/4/28/n2509655.md#1">《马可?波罗游记》中关于特异功能的记载</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/10/26/n3065148.md#1">特异功能 你信不信</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/5/n3335223.md#1">优昙婆罗花再现 神迹示人退出邪共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/11/n3340924.md#1">优昙婆罗花绽放北卡</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/11/n3340941.md#1">投稿：优昙婆罗花盛开在长春</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/11/n3341227.md#1">2011年7月在吉林大学盛开的优昙婆罗花</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/14/n3343901.md#1">台湾宜兰三现优昙婆罗花</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/8/20/n3349569.md#1">吉林市民喜见优昙婆罗花</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/10/n10702629.md#1" target="_blank">【还原史实】反右运动 中国知识分子惨遭摧折</a></li><li><a href="https://github.com/erg2932/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/15/n12186774.md#1">因封城变清澈 土耳其湖下4世纪教堂重见天日</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/2/n12153788.md#1">纵横破解：预言与人生 （上）</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/12/n12179666.md#1">黄历五月五日为什么称“端午”？</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/12/n12181432.md#1">【佳人传】如兰胜雪 才女张玉娘的凄婉传奇</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/10/n12174918.md#1">希腊神话 纳西瑟斯的过错</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12198669.md#1">【直播】白宫疫情简报会：227万人确诊</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12199275.md#1">【纪元播报】“蓬杨会”零成果？中美博弈升级</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/4/15/n12033930.md#1">【思想领袖】莱顿：美国面临中共科技威胁</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12197434.md#1">口罩第3波开卖 特殊色也买得到</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/18/n12196081.md#1">长江流域洪灾泛滥 专家谈三峡大坝隐患</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12198378.md#1">山西一银行发生挤兑 公务员被要求存钱堵漏</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12198770.md#1">母亲过世四个月 65岁周润发露面爬山</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/18/n12196437.md#1">一返京就遇疫情反弹 黄安媚共遭网民嘲讽</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/17/n12193273.md#1">米希亚参加《歌手》惨败 日媒质疑节目造假</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12198952.md#1">刘德华惊爆一整年生病 自嘲窜出白发和皱纹</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/18/n12196052.md#1">吴宗宪朱立伦结亲家 二女儿接受朱家外甥求婚</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/18/n12193878.md#1">咖啡的养生喝法 名医一天3杯防病又怡情</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/17/n12192726.md#1">吃了很快入睡！中医：助眠的4种食物和3味茶饮</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/17/n12193146.md#1">90%文明病和慢性发炎有关？这样吃灭体内的火</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/19/n12197427.md#1">美达人秀评审找碴 12岁女孩连唱3次终过关</a></li>
-<li><a href="https://github.com/erg2932/djy/blob/master/gb/20/6/18/n12195857.md#1">油漱口拔出细菌 每天5分钟远离牙病和口臭</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13672304.md#1">【涛哥侃封神】 第八十七回  土行孙夫妻阵亡</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687289.md#1">【新闻看点】上海清零乱象 市民被隔离进殡仪馆</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/erg2932/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/erg2932/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/11/11/19/n3435221.htm">探索未来科学与文化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/11/11/19/n3435221.htm">探索未来科学与文化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/erg2932/djy/blob/master/gb/11/11/19/n3435221.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/erg2932/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/erg2932/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/erg2932/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/erg2932/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/erg2932/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/11/11/19/n3435221.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
